# lamber-ia

./: APIkey.py  README.md  app.py  back_end.py  data_fetcher.py  figure.py  pyproject.toml
pages/: AI_mentor.py  Overview.py  dashboard.py  financial_statements.py  ratios_and_metrics.py  technical_analysis.py
